[tool.poetry]
name = "pyjiit"
version = "0.1.0a4"
description = "Python wrapper for JIIT webportal"
authors = ["Harsh Sharma <harsh@codelif.in>"]
license = "MIT License"
readme = "README.rst"


[project.urls]
Homepage = "https://github.com/codelif/pyjiit"
Issues = "https://github.com/codelif/pyjiit/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pycryptodome = "^3.20.0"


[tool.poetry.group.dev.dependencies]
sphinx = "7.4.7"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
